Compiler/tests/typing/good/testfile-mut-2.rs

struct S { a: i32, b: bool }
fn main() {
    let mut s = S { a: 42, b: false };
    s.b = true
}
