Compiler/tests/typing/bad/testfile-mut-2.rs

struct S { a: i32, b: bool }
fn main() {
    let s = S { a: 42, b: false };
    s.b = true
}
